# edulint

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Dockerfile.pypi  Makefile  README.md  app.py  docker-compose.yml  edulint.py  notes.md  pypi_helper.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/.workflows/: deploy.yml
.github/workflows/: ci-cd.yaml  codeql-analysis.yaml  codeql-analysis.yml  delay.yaml  deploy.yml  docker-build-and-publish.yaml  github-release.yaml  python-publish.yaml  python-publish.yml  redeploy-web.yaml  test-compatibility.yaml  test-on-push.yaml  test-run-of-published-version.yaml  test.yaml
docs/: requirements.txt
docs/source/: checkers.rst  conf.py  configuration.rst  explanations.rst  faq.rst  index.rst  package_api.rst  running.rst  translations.rst  user_guides.rst
docs/source/_ext/: directives.py
docs/source/_static/: demo2.cast  demo2_convert.sh  theme_overrides.css
edulint/: .pylintrc  __init__.py  __main__.py  config.py  config_translates.py  edulint.py  explanations.py  explanations.toml  linters.py  linting.py  option_parses.py  options.py  problem.py  tweakers.py
edulint/config/: arg.py  config.py  config_translates.py  config_translations.py  file_config.py  language_translations.py  option_sets.py  raw_flake8_patterns.py  utils.py
edulint/config/files/: cs0.toml  cs1.toml  default.toml  empty.toml  full.toml  webtiger.toml
edulint/linting/: .pylintrc  basic_checker.py  linting.py  nonparsing_checkers.py  overrides.py  problem.py  process_handler.py  tweakers.py
edulint/linting/analyses/: _z3.py  antiunify.py  data_dependency.py  mutability.py  patcher.py  reaching_definitions.py  types.py  utils.py  var_events.py  variable_modification.py  variable_scope.py  z3_analysis.py  z3_block_analysis.py
edulint/linting/analyses/cfg/: dot_generator.py  graph.py  utils.py  visitor.py
edulint/linting/checkers/: basic_checker.py  duplication_checker.py  improper_loop.py  local_defects.py  modified_listener.py  old_duplication_checker.py  python_ta_checkers.py  short_problems.py  simplifiable_if.py  unsuited_loop.py  utils.py  z3_analysis.py  z3_block_analysis.py
edulint/linting/checkers/duplication/: checker.py  duplicate_block.py  duplicate_if.py  duplicate_sequence.py  utils.py
edulint/prepare_explanations/: .gitignore  __init__.py  edulint_manual.toml  readme.md
edulint/prepare_explanations/pylint/: extract_from_pylint.py  pylint_export.json  thonny_process_slim.py
edulint/prepare_explanations/pylint_data/: extract_from_pylint.py  pylint_export.json  pylint_messages.py  thonny_process_slim.py
edulint/prepare_explanations/thonny/: convert_to_edulint.py  thonny_process_backup.py
edulint/prepare_explanations/thonny_data/: __init__.py  extract_from_edulint.py  thonny_messages.py  thonny_process_backup.py
edulint/versions/: pypi_helper.py  utils.py  version_checker.py
linter/: edulint.py
src/edulint/: .pylintrc  __init__.py  __main__.py  edulint.py
static/: base.js  handle_problems.js  robots.txt  style.css
templates/: about.html  analysis.html  base.html  editor.html  faq.html  upload.html
tests/: ib111-weeks.toml  requirements.txt  test_analyses.py  test_config.py  test_duplication.py  test_improper_loop.py  test_lint.py  test_local_defects.py  test_main.py  test_short_problems.py  test_simplifiable_if.py  test_translations.py  test_unsuited_loop.py  test_utils.py  test_visitors.py  utils.py
