[project]
name = "edulint"
version = "4.1.3"  # Replace with your actual version
dynamic = ["readme", "requires-python", "license", "classifiers", "urls", "dependencies"]

[build-system]
requires = ["setuptools>=62.6"]  # required for: "install_requires = file: requirements.txt"
build-backend = "setuptools.build_meta"

[project.scripts]
edulint = "edulint.edulint:main"
