[project]
name = "edulint"
dynamic = ["readme", "requires-python", "license", "classifiers", "dependencies", "version"]

[build-system]
requires = ["setuptools>=62.6"]  # required for: "install_requires = file: requirements.txt"
build-backend = "setuptools.build_meta"

[project.scripts]
edulint = "edulint.edulint:main"
