[metadata]
name = edulint
version = 0.0.6
author = Anna Rechtackova
author_email = anna.rechtackova@mail.muni.cz
description = A Python Educational Linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GiraffeReversed/edulint
project_urls =
    Bug Tracker = https://github.com/GiraffeReversed/edulint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.7
install_requires =
    flake8
    flake8-json
    pylint
include_package_data = True

[options.packages.find]
where = .

[options.package_data]
* = .pylintrc
