[metadata]
name = edulint
author = Anna Rechtackova
author_email = anna.rechtackova@mail.muni.cz
description = A Python Educational Linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GiraffeReversed/edulint
project_urls =
    Bug Tracker = https://github.com/GiraffeReversed/edulint/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.7
install_requires =
    flake8 ==4.0.1
    flake8-json ==21.7.0
    pylint ==2.14.5
    dataclasses-json
    tomli
include_package_data = True

[options.packages.find]
where = .
exclude = 
    prepare_explanations/*

[options.package_data]
* = 
    .pylintrc
    explanations.toml

