[metadata]
name = edulint
author = Anna Rechtackova
author_email = anna.rechtackova@mail.muni.cz
description = A Python Educational Linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GiraffeReversed/edulint
project_urls =
    Bug Tracker = https://github.com/GiraffeReversed/edulint/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = GPLv3

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
where = .
exclude =
    prepare_explanations/*
    prepare_explanations/pylint_data/*
    prepare_explanations/thonny_data/*
    

[options.package_data]
* =
    explanations.toml
    config/files/*.toml
